--- a/src/main.scss
+++ b/src/main.scss
@@ -1,17 +1,11 @@
 @import "./components/header/header";
 @import "./components/todoList/list";
+@import "./components/addTodo/add-todo";
+@import "./components/editTodo/editTodo";
+@import "./app";
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-.app {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 100vw;
-  background-color: rgb(216, 250, 230);
-  min-height: 100vh;
 }
