--- a/src/_app.scss
+++ b/src/_app.scss
@@ -5,6 +5,13 @@
   max-width: 100vw;
   background-color: rgb(216, 250, 230);
   min-height: 100vh;
+  .add-btn {
+    margin-top: 10px;
+    background-color: rgb(186, 175, 238);
+    border: 1px solid rgb(0, 38, 255);
+    padding: 5px;
+    border-radius: 5px;
+  }
 
   .content {
     display: flex;
